objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>OpptyPriorityLevel__c</fullName>
        <description>SR0</description>
        <label>Opportunity Priority Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>SOC candidate</fullName>
                </value>
                <value>
                    <fullName>SOC confirmed</fullName>
                </value>
                <value>
                    <fullName>SOC confirmed &amp; follow-up</fullName>
                </value>
                <value>
                    <fullName>Key/Targeted project</fullName>
                </value>
                <value>
                    <fullName>Estándar</fullName>
                    <isActive>false</isActive>
                    <label>Estándar</label>
                </value>
                <value>
                    <fullName>ITSL2</fullName>
                    <isActive>false</isActive>
                    <label>ITSL2</label>
                </value>
                <value>
                    <fullName>SOC</fullName>
                    <isActive>false</isActive>
                    <label>SOC</label>
                </value>
                <value>
                    <fullName>Solution</fullName>
                    <isActive>false</isActive>
                    <label>Solution</label>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Solutions</label>
                </value>
                <value>
                    <fullName>Стандартные</fullName>
                    <isActive>false</isActive>
                    <label>Стандартные</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpptyType__c</fullName>
        <description>SR0</description>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Solutions Fast-Track</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Padrão</fullName>
                    <isActive>false</isActive>
                    <label>Padrão</label>
                </value>
                <value>
                    <fullName>Solution</fullName>
                    <isActive>false</isActive>
                    <label>Solution</label>
                </value>
                <value>
                    <fullName>Solution Fast Track</fullName>
                    <isActive>false</isActive>
                    <label>Solution Fast Track</label>
                </value>
                <value>
                    <fullName>Solutions Fast- Track</fullName>
                    <isActive>false</isActive>
                    <label>Solutions Fast- Track</label>
                </value>
                <value>
                    <fullName>Soluzioni rapide</fullName>
                    <isActive>false</isActive>
                    <label>Soluzioni rapide</label>
                </value>
                <value>
                    <fullName>a3UA000000050F5</fullName>
                    <isActive>false</isActive>
                    <label>a3UA000000050F5</label>
                </value>
                <value>
                    <fullName>Стандартные</fullName>
                    <isActive>false</isActive>
                    <label>Стандартные</label>
                </value>
                <value>
                    <fullName>解决方案快速通道</fullName>
                    <isActive>false</isActive>
                    <label>解决方案快速通道</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherCRMReferenceNumber__c</fullName>
        <description>Core</description>
        <label>Other CRM Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherCRMSystem__c</fullName>
        <description>SR0</description>
        <inlineHelpText>Display the name of the Legacy CRM system where applicable to the opportunity. Most of the time this is used for migration of data.</inlineHelpText>
        <label>Other CRM System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAmount__c</fullName>
        <description>SR0 - This field is a conversion of the PL Amount (Number) into a currency type field.</description>
        <formula>TECH_PLAmountInNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total OL Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Chat_ID__c</fullName>
        <label>Chat ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_OLH__Mail_ID__c</fullName>
        <label>Mail ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0</description>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Child Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartnerFacingAmount__c</fullName>
        <label>Partner Facing Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartnerInvolvement__c</fullName>
        <description>APRIL 2012 RELEASE - New PRM field</description>
        <label>Partner Involvement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partner Registered</fullName>
                </value>
                <value>
                    <fullName>Passed to Partner</fullName>
                </value>
                <value>
                    <fullName>Partner Called-In</fullName>
                </value>
                <value>
                    <fullName>Lead Converted by Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PassedtoPartner2ndNotification__c</fullName>
        <label>Passed to Partner 2nd Notification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PassedtoPartnerOpportunityRetracted__c</fullName>
        <description>Stores the number of days after which the opportunity(associated with this Partner Program) passed to the partner  is retracted.</description>
        <label>Passed to Partner Opportunity Retract</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PlannedQualification__c</fullName>
        <description>SR0 - This field is used in the milestone opportunity section (manually fill by the user).</description>
        <inlineHelpText>It is the date when we expect to have the opportunity qualified and make the decision as whether or not we will pursue this opportunity.</inlineHelpText>
        <label>Planned Qualification (S0)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedQuoteInvestDecision__c</fullName>
        <description>SR0 - This field is used in the milestone opportunity section (manually fill by the user).</description>
        <inlineHelpText>It is the date when we expect to make the decision as whether or not we will participate to this bid.</inlineHelpText>
        <label>Planned Quote Invest Decision (S1)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlannedQuoteSubmitDecision__c</fullName>
        <description>SR0 - This field is used in the milestone opportunity section (manually fill by the user).</description>
        <inlineHelpText>It is the date when we expect to make the decision as whether or not we will submit our offer for this bid.</inlineHelpText>
        <label>Planned Quote Submit Decision (S2)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PowerBSICount__c</fullName>
        <description>October2012-Count the number of Power BSI</description>
        <label>Power BSI Count</label>
        <summaryFilterItems>
            <field>BusinessSpecificInformation__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Power</value>
        </summaryFilterItems>
        <summaryForeignKey>BusinessSpecificInformation__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Level</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>ProgramLevel__c.PartnerProgram__c</field>
                <operation>equals</operation>
                <valueField>$Source.TECH_Partner_Program__c</valueField>
            </filterItems>
            <filterItems>
                <field>ProgramLevel__c.LevelStatus__c</field>
                <operation>equals</operation>
                <value>Active, Inactive</value>
            </filterItems>
            <filterItems>
                <field>$User.BypassVR__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectCategoryP0__c</fullName>
        <label>Project Category P0</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectCategoryS0__c</fullName>
        <label>Project Category S0</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectCategoryS1__c</fullName>
        <label>Project Category S1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Project</label>
        <referenceTo>OPP_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromisedDeliveryDateForQuotation__c</fullName>
        <inlineHelpText>Represents the date when SE promised to send the quote to the Account. This date has been previously agreed with Solution Center/Quotation Center.</inlineHelpText>
        <label>Promised delivery date for Quotation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteIssuanceDateToCustomer__c</fullName>
        <description>September Release - To be populated automatically from the active quotes attached to the Opportunity.</description>
        <inlineHelpText>Represents the date when the quote has been sent to the Account. It is automatically copied from the Quote Link page once the field “Issued quote date to Account” was completed in that object.</inlineHelpText>
        <label>Issued Quote Date to Account</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteSubmissionDate__c</fullName>
        <description>SR0 - This field is used in the milestone opportunity section (manually filled by the user).</description>
        <inlineHelpText>Date when the Account is expecting the quote to be sent</inlineHelpText>
        <label>Quote Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QuoteSubmissionTime__c</fullName>
        <inlineHelpText>Define a specific, time-sensitive deadline by which the Account expects a quote to be sent.</inlineHelpText>
        <label>Quote Submission Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_BusinessCreatedDate__c</fullName>
        <description>July Release - Date to store oppty date creation in the Source system</description>
        <label>Business Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REP_CloseDateNext30Days__c</fullName>
        <description>February2013- Created for Reporting purposes. Opportunities that will be closed in the next 30 Days</description>
        <formula>IF (AND (TODAY() &lt;= CloseDate, CloseDate&lt;= TODAY()+30), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date Next 30 Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_CreatedByJobRole__c</fullName>
        <label>REP_CreatedByJobRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_ExecutiveSummary__c</fullName>
        <formula>HYPERLINK(&apos;/apex/VFP78_OpptyExecutiveSummary?id=&apos;+Id , &apos;Executive Summary&apos; , &apos;_blank&apos;)</formula>
        <label>Executive Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_InvensysPotentialCrossSellingWithSE__c</fullName>
        <description>Field to identify opportunities that have the potential to be cross selling with Schneider Electric.This field is used in reports to filter on this information.</description>
        <label>Invensys Potential Cross Selling with SE</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_IsLateQuoteSubmissionDate__c</fullName>
        <description>February2013- Created for Reporting purposes. Opportunities that have Quote submission date overdue</description>
        <formula>IF( QuoteSubmissionDate__c &lt; TODAY(), 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsLateQuoteSubmissionDate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_Lvl3OpportunitiesAmountAssessment__c</fullName>
        <description>Field created to track the amount assessment of level 3 opportunities .</description>
        <formula>IF( TECH_IsLevel3__c ==1,  AmountAssessment__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multi Business system weighted amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REP_MixBusinessOpptyAmountAssessment__c</fullName>
        <description>field created to calculate the amount assessment of mixed business opportunities</description>
        <formula>Probability  *  REP_MixBusinessOpptyAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross selling Oppty Weighted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REP_MixBusinessOpptyAmount__c</fullName>
        <description>bFO - Mixed Business Opportunity (Amount)</description>
        <formula>IsacrosssellingNewrule__c*Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross selling Opportunity (Amount)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REP_MixBusinessOpptyNbr__c</fullName>
        <description>bFO - Mixed Business Opportunity (Nbr)</description>
        <formula>IsacrosssellingNewrule__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cross selling Opportunity (Nbr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_OppLeaderManager__c</fullName>
        <formula>IF(Owner.ManagerId = $User.Id , 1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REP_OppLeaderManager</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_OwnerJobCode__c</fullName>
        <formula>Owner.JobCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Leader: Job Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_PilotSource__c</fullName>
        <description>This field is used to know if the record has been updated or created through a Pilot.</description>
        <label>REP_Pilot Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud Extend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REP_Stage2UnacceptedOpportunities__c</fullName>
        <description>February2013- Used for reporting purpose - Opportunities still in stage 2 after 10 days on creation</description>
        <formula>IF (AND (ISPICKVAL( StageName , &apos;2 - Define Opportunity Portfolio&apos;),  DATEVALUE(CreatedDate) &lt; (TODAY() - 10)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage 2 Unaccepted Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_UltimateParentForEUandAccount__c</fullName>
        <description>This field is used for reporting to enable dashboard filters to report on Opportunities associated with Strategic Accounts and to avoid creating one dashboard for each Account.</description>
        <formula>IF(
	ISBLANK (Account.UltiParentAcc__r.Id), 
		AccountId+ &quot;-&quot; +Account.SEAccountID__c, 
		Account.UltiParentAcc__r.Id+ &quot;-&quot; +Account.UltiParentAcc__r.SEAccountID__c
)  
+ &quot;,&quot; +  
IF(
	ISBLANK (EndUserCustomer__r.UltiParentAcc__r.Id), 
		EndUserCustomer__c + &quot;-&quot; + EndUserCustomer__r.SEAccountID__c, 
		EndUserCustomer__r.UltiParentAcc__r.Id+ &quot;-&quot; + EndUserCustomer__r.UltiParentAcc__r.SEAccountID__c
)</formula>
        <label>REP_Ultimate Parent for EU and Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REP_Validated__c</fullName>
        <description>March2013 – For reporting purpose, track the opportunity which has made it into stage 4 and upper</description>
        <formula>IF (AND (TECH_CreatedFromLead__c = TRUE, 
OR(ISPICKVAL( StageName , &apos;4 - Influence &amp; Develop&apos;), 
ISPICKVAL( StageName , &apos;5 - Prepare &amp; Bid&apos;), 
ISPICKVAL( StageName , &apos;6 - Negotiate &amp; Win&apos;), 
ISPICKVAL( StageName , &apos;7 - Deliver &amp; Validate&apos;), 
AND(ISPICKVAL( StageName , &apos;0 - Closed&apos;), StageWhenClosed__c &lt;&gt; &apos;2 - Define Opportunity Portfolio&apos;, StageWhenClosed__c &lt;&gt; &apos;3 - Identify &amp; Qualify&apos;))), 
1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REP_WonAmount__c</fullName>
        <description>SR0 - Field only used for reporting purpose. Equals to Oppty Amount if oppty is won.</description>
        <formula>TECH_TotalWonOLAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Won OL Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RFPReference__c</fullName>
        <description>SR0</description>
        <inlineHelpText>Request For Proposal: External document number provided by the Account. This document contain all the Functional Specifications.</inlineHelpText>
        <label>RFP Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFQReceivedOn__c</fullName>
        <description>SR0 - This field is used in the VR02_Gate_S0_Validation.</description>
        <label>RFP Received On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonClosedLost__c</fullName>
        <description>Reason for Closed Lost for Partner Users</description>
        <label>Reason for Closed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChannelPartnerStage__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Administration - Customer changed mind and project cancelled</fullName>
                </value>
                <value>
                    <fullName>Administration - Customer project delayed indefinitely</fullName>
                </value>
                <value>
                    <fullName>Administration - Customer refused to change their T&amp;C</fullName>
                </value>
                <value>
                    <fullName>Administration - No Bid decision</fullName>
                </value>
                <value>
                    <fullName>Administration - No Go decision</fullName>
                </value>
                <value>
                    <fullName>Administration - No real opportunity</fullName>
                </value>
                <value>
                    <fullName>Administration - Not enough time to quote</fullName>
                </value>
                <value>
                    <fullName>Administration - Only for market price purposes</fullName>
                </value>
                <value>
                    <fullName>Administration - Out of SE Strategy</fullName>
                </value>
                <value>
                    <fullName>Administration - Quote not delivered on time</fullName>
                </value>
                <value>
                    <fullName>Administration - SE late in sales cycle</fullName>
                </value>
                <value>
                    <fullName>Administration - Terms &amp; Conditions not met</fullName>
                </value>
                <value>
                    <fullName>Financial - Many risks during project&apos;s execution</fullName>
                </value>
                <value>
                    <fullName>Financial - Margins unacceptable</fullName>
                </value>
                <value>
                    <fullName>Financial - Without internal authorization to bid</fullName>
                </value>
                <value>
                    <fullName>Logistics - SE delivery time did not meet customer need</fullName>
                </value>
                <value>
                    <fullName>Partner Registered Duplicate</fullName>
                </value>
                <value>
                    <fullName>Price - Customer decision that price too high for solution</fullName>
                </value>
                <value>
                    <fullName>Price - Customer lost budget / funding for project</fullName>
                </value>
                <value>
                    <fullName>Price - Customer selected a lower bid</fullName>
                </value>
                <value>
                    <fullName>Price - Too high compared to customer budget</fullName>
                </value>
                <value>
                    <fullName>Price - Too low to be considered acceptable</fullName>
                </value>
                <value>
                    <fullName>Relationship - Commercial Negotiation Unacceptable</fullName>
                </value>
                <value>
                    <fullName>Relationship - Courtesy offer</fullName>
                </value>
                <value>
                    <fullName>Relationship - Customer decision to not work with SE</fullName>
                </value>
                <value>
                    <fullName>Relationship - Customer works only with specific vendor</fullName>
                </value>
                <value>
                    <fullName>Relationship - Lost contact with customer</fullName>
                </value>
                <value>
                    <fullName>Relationship - Not a qualified customer due to past relationship</fullName>
                </value>
                <value>
                    <fullName>Relationship - Other</fullName>
                </value>
                <value>
                    <fullName>Relationship - Poor communication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReasonForDeletion__c</fullName>
        <description>November Release. Use to identify the reason why record needs to be deleted.</description>
        <label>Reason for Deletion</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ToBeDeleted__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Created in error</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>SR0 - This field is used to qualify the reason when an opportunity is Closed Lost or Won.</description>
        <inlineHelpText>Refer to the Custom Link for the definitions of Reasons</inlineHelpText>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administration - Customer changed mind and project cancelled</fullName>
                </value>
                <value>
                    <fullName>Administration - Customer project delayed indefinitely</fullName>
                </value>
                <value>
                    <fullName>Administration - Customer refused to change their T&amp;C</fullName>
                </value>
                <value>
                    <fullName>Administration - No Bid decision</fullName>
                </value>
                <value>
                    <fullName>Administration - No Go decision</fullName>
                </value>
                <value>
                    <fullName>Administration - No real opportunity</fullName>
                </value>
                <value>
                    <fullName>Administration - Not enough time to quote</fullName>
                </value>
                <value>
                    <fullName>Administration - Only for market price purposes</fullName>
                </value>
                <value>
                    <fullName>Administration - Out of SE Strategy</fullName>
                </value>
                <value>
                    <fullName>Administration - Quote not delivered on time</fullName>
                </value>
                <value>
                    <fullName>Administration - SE late in sales cycle</fullName>
                </value>
                <value>
                    <fullName>Administration - Terms &amp; Conditions not met</fullName>
                </value>
                <value>
                    <fullName>Administrative - Replaced with Master Project</fullName>
                </value>
                <value>
                    <fullName>Competitor Poor Performance</fullName>
                </value>
                <value>
                    <fullName>Financial - Many risks during project&apos;s execution</fullName>
                </value>
                <value>
                    <fullName>Financial - Margins unacceptable</fullName>
                </value>
                <value>
                    <fullName>Financial - Without internal authorization to bid</fullName>
                </value>
                <value>
                    <fullName>Logistics - Ability to deliver on schedule</fullName>
                </value>
                <value>
                    <fullName>Logistics - SE delivery time did not meet customer need</fullName>
                </value>
                <value>
                    <fullName>Partner Registered Duplicate</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Price - Customer decision that price too high for solution</fullName>
                </value>
                <value>
                    <fullName>Price - Customer lost budget / funding for project</fullName>
                </value>
                <value>
                    <fullName>Price - Customer selected a lower bid</fullName>
                </value>
                <value>
                    <fullName>Price - Too high compared to customer budget</fullName>
                </value>
                <value>
                    <fullName>Price - Too low to be considered acceptable</fullName>
                </value>
                <value>
                    <fullName>Relationship - Commercial Negotiation Unacceptable</fullName>
                </value>
                <value>
                    <fullName>Relationship - Courtesy offer</fullName>
                </value>
                <value>
                    <fullName>Relationship - Customer decision to not work with SE</fullName>
                </value>
                <value>
                    <fullName>Relationship - Customer works only with specific vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferenceCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR1 - Displays the Case Number the Opportunity is created Form</description>
        <inlineHelpText>An unique identification number, populated when the opportunity was generated through the conversion of a notification logged by Call Center.</inlineHelpText>
        <label>Reference Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelationshipSuiteLastUpdated__c</fullName>
        <label>Relationship Suite Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rep_MasterOpportunityId__c</fullName>
        <formula>If(NOT(ISBLANK(ParentOpportunity__r.ParentOpportunity__c)),
ParentOpportunity__r.ParentOpportunity__c,
IF(NOT(ISBLANK(ParentOpportunity__c)),ParentOpportunity__c,Id))</formula>
        <label>Rep_MasterOpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResyncProposalCreation__c</fullName>
        <formula>IF(AND(ISBLANK(NewtonBidId__c),NOT(ISBLANK(NewtonSynchronizationMessage__c))),HYPERLINK(&quot;/apex/VFP_ResyncBidCreation?Id=&quot; &amp; Id , &quot;Click Here to Resync Proposal Creation&quot;, &quot;_self&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Resync Proposal Creation&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RevenueStormLink__c</fullName>
        <formula>HYPERLINK(&quot;https://www.saleswebserver.net/sfdc/RevenueStorm/showRSopportunity.asp?ID=&quot; &amp; Id &amp; &quot;&amp;SessionID=&quot;&amp; $Api.Session_ID &amp;&quot;&amp;EndPoint=&quot;&amp; $Api.Partner_Server_URL_130 &amp; &quot;&amp;AccountID=&quot;&amp;  Id &amp; &quot;&amp;ReturnURL=$Label.CL10071&quot; &amp; &quot;/&quot; &amp; Id ,IMAGE(&quot;/resource/Revenue_Storm_Logo&quot;, &quot;Revenue Storm&quot;, 63, 87), &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Storm Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S0AttractivenessResult__c</fullName>
        <description>SR0 - This field is used to track history on S0 Attractiveness Result. This field is fed by Workflow field update.</description>
        <label>S0 Attractiveness Result</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>